@@ -47,6 +47,11 @@ ToNeighborInfo(const UDisks2::Object &o) noexcept
 	return {o.GetUri(), o.path};
 }
 
+static constexpr char udisks_neighbor_match[] =
+	"type='signal',sender='" UDISKS2_INTERFACE "',"
+	"interface='" DBUS_OM_INTERFACE "',"
+	"path='" UDISKS2_PATH "'";
+
 class UdisksNeighborExplorer final
 	: public NeighborExplorer {
 
@@ -110,11 +115,7 @@ UdisksNeighborExplorer::DoOpen()
 
 	try {
 		Error error;
-		dbus_bus_add_match(connection,
-				   "type='signal',sender='" UDISKS2_INTERFACE "',"
-				   "interface='" DBUS_OM_INTERFACE "',"
-				   "path='" UDISKS2_PATH "'",
-				   error);
+		dbus_bus_add_match(connection, udisks_neighbor_match, error);
 		error.CheckThrow("DBus AddMatch error");
 
 		dbus_connection_add_filter(connection,
@@ -147,8 +148,10 @@ UdisksNeighborExplorer::DoClose() noexcept
 		list_request.Cancel();
 	}
 
-	// TODO: remove_match
-	// TODO: remove_filter
+	auto &connection = GetConnection();
+
+	dbus_connection_remove_filter(connection, HandleMessage, this);
+	dbus_bus_remove_match(connection, udisks_neighbor_match, nullptr);
 
 	dbus_glue.Destruct();
 }
