@@ -12,6 +12,8 @@ ver 0.21.25 (not yet released)
 * output
   - osx: improve sample rate selection
   - osx: fix noise while stopping
+* neighbor
+  - upnp: fix crash during shutdown
 * Windows/Android:
   - fix Boost detection after breaking change in Meson 0.54
 
